// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch basic renders checked toggle switch 1`] = `
<ToggleSwitch
  checked={true}
  name="testToggle"
/>
`;

exports[`ToggleSwitch basic renders inactive toggle switch 1`] = `
<ToggleSwitch
  name="testToggle"
/>
`;
